finish features section. padding, alignment, font issues

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
     font-weight: 300;
     line-height: 1.3;
     color: $grayishBlue;
+    min-height: 300vh;
     @include breakpoint-up(large) {
         font-size: $font-md;
     }
@@ -67,21 +68,31 @@ a:hover {
     max-width: 69.375rem;
     margin: 0 auto;
     &--py {
-        padding-top: 2.25rem;
-        padding-bottom: 2.25rem;
+        padding-top: 4.375rem;
+        padding-bottom: 4.375rem;
+        @include breakpoint-up(large) {
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
     }
     &--px {
         padding-right: 1.5rem;
         padding-left: 1.5rem;
     }
     &--pt {
-        padding-top: 2.25rem;
+        padding-top: 4.375rem;
+        @include breakpoint-up(large) {
+            padding-top: 6rem;
+        }
     }
     &--pr {
         padding-right: 1.5rem;
     }
     &--pb {
-        padding-bottom: 2.25rem;
+        padding-bottom: 4.375rem;
+        @include breakpoint-up(large) {
+            padding-bottom: 6rem;
+        }
     }
     &--pl {
         padding-left: 1.5rem;
